Cosmos history fix; quests z-index fix

--- a/moduls/game/client/css/newgame.styl
+++ b/moduls/game/client/css/newgame.styl
@@ -1302,7 +1302,7 @@ body.game
 		background-repeat no-repeat
 		flex-shrink 3
 		opacity 0.8
-		z-index 1
+		z-index 3
 		
 		.title
 			display flex
